fixed spacing of shortcuts popup

--- a/beat-editor/src/styles.scss
+++ b/beat-editor/src/styles.scss
@@ -139,8 +139,6 @@ button {
 
 .keyboard-shortcuts-wrapper {
   position: relative;
-  margin-left: 10px;
-
 }
 
 .keyboard-shortcuts {
@@ -181,9 +179,16 @@ button {
 .command-keybind {
   border: 2px solid #47555e;
   border-radius: 2px;
-  padding-left: 8px;
-  padding-right: 8px;
+  padding-left: 1px;
+  padding-right: 1px;
+  padding-top: 2px;
+    padding-bottom: 2px;
   margin-right: 5px;
+  font-size: 21px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 30px;
 }
 
 .plus {
@@ -254,8 +259,8 @@ button {
   display: flex;
   align-items: center;
   gap: 3px;
+  line-height: 1;
 }
-
 .shortcut-label {
   font-size: 12px;
   text-align: center;
